Complete Alda HW06

--- a/lectures/algos_data_structures/Exercise06.ipynb
+++ b/lectures/algos_data_structures/Exercise06.ipynb
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "NAME = \"\"\n",
-    "COLLABORATORS = \"\""
+    "NAME = \"Björn Steinorth\"\n",
+    "COLLABORATORS = \"Jan Wirth\""
    ]
   },
   {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -79,9 +79,15 @@
    },
    "outputs": [],
    "source": [
-    "def my_hash(string, s):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "def my_hash(string, s, i=0):#i = 0, wenn nur wie in Aufgabe 1 der Hashwert berechnet werden soll\n",
+    "    summe = 0;\n",
+    "    for j in range (0,len(string)):\n",
+    "        #nimmt den ASCII-Wert multipliziert mit der Stelle des characters beginnend bei 1\n",
+    "        #um viele verschiedene Werte zu erhalten und bildet mit allen Werten die Summe\n",
+    "        summe = summe + (j+1)*ord(string[j])\n",
+    "    #i für Verschiebung mit linearem Sondieren\n",
+    "    hashwert = (summe+i) % s #es darf nur s Elemente danach geben\n",
+    "    return hashwert"
    ]
   },
   {
@@ -104,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -117,10 +123,21 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hashwert von done =  0\n",
+      "Hashwert von node =  1\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "hashwert_done = my_hash(\"done\",3)\n",
+    "hashwert_node = my_hash(\"node\",3)\n",
+    "print(\"Hashwert von done = \",hashwert_done)\n",
+    "print(\"Hashwert von node = \",hashwert_node)"
    ]
   },
   {
@@ -156,7 +173,7 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Der Hashwert ist bei dieser Implementation nicht gleiche, da die ASCII-Werte der Character mit der Stelle multipliziert werden, damit die Funktion nicht direkt durchschaubar ist. Sonst hätten alle Strings die genau die gleichen Character haben den gleichen Hashwert."
    ]
   },
   {
@@ -179,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -191,17 +208,47 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hashtabelle: {0: 43, 1: 45, 2: 76, 3: 57, 4: 12, 5: 77, 6: 13, 7: None, 8: None, 9: None, 10: 10}\n"
+     ]
+    }
+   ],
    "source": [
+    "def hashvalue(item, hash_table_size, i):\n",
+    "    return (item % hash_table_size + i) % hash_table_size\n",
+    "\n",
     "def linearProbingHash(item_list, hash_table_size):\n",
-    "    \n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "    #Erzeugen der Hashtabelle als Dictionary mit hash_table_size Elementen\n",
+    "    hash_table = {}\n",
+    "    for i in range (0, hash_table_size):\n",
+    "        hash_table[i] = None  \n",
+    "    #für jedes Element der item_list wird der Hashwert berechnet\n",
+    "    for j in range (0, len(item_list)):\n",
+    "        #Parameter i für Verschiebung bei Kollision\n",
+    "        for i in range (0,hash_table_size):\n",
+    "            hashwert = hashvalue(item_list[j], hash_table_size, i)\n",
+    "            #Hashwert wird so lange mit i neu berechnet, bis ein Key ohne Value gefunden wird\n",
+    "            #Das Element der Liste wird an der Stelle des berechneten Hashwertes eingetragen\n",
+    "            if hash_table[hashwert] == None:\n",
+    "                hash_table[hashwert] = item_list[j]\n",
+    "                break #i muss nicht weiter erhöht werden, wenn das Element zugeordnet wurde\n",
+    "    return hash_table\n",
+    "\n",
+    "list = [10,45,43,76,57,12,77,13]\n",
+    "s = 11\n",
+    "hashtabelle = linearProbingHash(list, s)\n",
+    "print(\"Hashtabelle:\",hashtabelle)\n",
+    "            \n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -240,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -252,17 +299,41 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hashtabelle: {0: 'her', 1: 'this', 2: 'that', 3: 'when', 4: 'what', 5: 'how', 6: 'i dont know', 7: None, 8: 'why', 9: None, 10: 'his'}\n"
+     ]
+    }
+   ],
    "source": [
-    "def linearProbingHashStrings(item_list, hash_table_size):\n",
-    "    \n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def linearProbingHash(item_list, hash_table_size):\n",
+    "    #Erzeugen der Hashtabelle als Dictionary mit hash_table_size Elementen\n",
+    "    hash_table = {}\n",
+    "    for i in range (0, hash_table_size):\n",
+    "        hash_table[i] = None  \n",
+    "    #für jedes Element der item_list wird der Hashwert berechnet\n",
+    "    for j in range (0, len(item_list)):\n",
+    "        #Parameter i für Verschiebung bei Kollision\n",
+    "        for i in range (0,hash_table_size):\n",
+    "            #verwendung der my_hash Funktion von oben\n",
+    "            hashwert = my_hash(item_list[j], hash_table_size, i)\n",
+    "            if hash_table[hashwert] == None:\n",
+    "                hash_table[hashwert] = item_list[j]\n",
+    "                break        \n",
+    "    return hash_table\n",
+    "\n",
+    "item_list = [\"his\", \"her\", \"this\", \"that\", \"what\", \"when\", \"how\", \"why\", \"i dont know\"]\n",
+    "hash_table_size = 11\n",
+    "hashtabelle = linearProbingHashStrings(item_list, hash_table_size)\n",
+    "print(\"Hashtabelle:\",hashtabelle)    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -290,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -302,17 +373,7 @@
      "solution": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "37\n",
-      "{'Calvados', 'Cream', 'Lime juice', 'Champagne', 'Campari', 'Creme liqueur', 'Drambuie', 'Soda water', 'Whiskey', 'Dark rum', 'Cranberry juice', 'Cherry liqueur', 'Syrup', 'Red Port', 'Cognac', 'Vodka', 'Triple Sec', 'Cola', 'Pisco', 'Coffee liqueur', 'Prosecco', 'Gin', 'Kirsch', 'Egg yolk', 'White rum', 'Tequila', 'Apricot brandy', 'Grapefruit juice', 'Pineapple juice', 'Coconut milk', 'Orange juice', 'Vermouth', 'Lemon juice', 'Peach puree', 'Ginger Ale', 'Galliano', 'Lillet Blonde'}\n",
-      "37\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
@@ -340,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -365,27 +426,6 @@
     "assert ('Kirsch' in all_ingredients(recipes))\n",
     "assert ('Pisco' in all_ingredients(recipes))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
