--- a/lectures/algos_data_structures/Exercise07.ipynb
+++ b/lectures/algos_data_structures/Exercise07.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "NAME = \"Björn Steinorth\"\n",
-    "COLLABORATORS = \"\""
+    "COLLABORATORS = \"Jan Wirth\""
    ]
   },
   {
@@ -495,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
