--- a/lectures/algos_data_structures/Exercise08.ipynb
+++ b/lectures/algos_data_structures/Exercise08.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -494,7 +494,15 @@
     "        self.__root = self.__tree_remove(self.__root, key)\n",
     "        \n",
     "    def __tree_remove (self, parent, key):\n",
-    "        pass\n",
+    "        if parent != None and parent.key == key:\n",
+    "            parent = None\n",
+    "        return\n",
+    "        if parent.left.key == key:\n",
+    "            parent.left = parent.left.left if parent.left.left.priority > parent.left.right.priority else parent.left.right\n",
+    "        elif parent.right.key == key:\n",
+    "            parent.right = parent.right.right if parent.right.right.priority > parent.right.left.priority else parent.right.left\n",
+    "            \n",
+    "        \n",
     "\n",
     "    \n",
     "    def insert(self, key, priority=None):\n",
@@ -504,8 +512,6 @@
     "        else:\n",
     "            priority = random.random() if priority is None else priority\n",
     "        self.__root = self.__tree_insert(self.__root, Node(key, priority))\n",
-    "\n",
-    "#==============================================================================\n",
     "        \n",
     "class RandomTreap(Treap):\n",
     "    \n",
@@ -518,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -548,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 73,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -638,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -709,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -741,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -809,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 77,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -847,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 78,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -957,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 79,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1006,6 +1012,27 @@
     "postOrderTraverse(b.root)\n",
     "check(b.root)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
